# vitrum

./: .gitattributes  .gitignore  Cargo.toml  README.md
bvh/: Cargo.toml
bvh/src/: lib.rs
file-loader/: Cargo.toml
file-loader/src/: lib.rs
geometry/: Cargo.toml
geometry/src/: collision.rs  face.rs  lib.rs  plane.rs  vector3.rs
live-tracer/: Cargo.toml
obj-loader/: Cargo.toml
obj-loader/src/: lib.rs
obj-loader/src/errors/: mod.rs
obj-loader/src/helpers/: mod.rs
stl-loader/: Cargo.toml
stl-loader/src/: lib.rs
stl-loader/src/ascii/: mod.rs
stl-loader/src/binary/: mod.rs
stl-loader/src/common/: mod.rs
vitrum/: Cargo.toml
vitrum/src/: lambert.rs  main.rs  stack.rs  whitted.rs
