[package]
name = "stl-loader"
version = "0.1.0"
authors = ["Roma Klapaukh <r.klapaukh@ucl.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geometry = { path = "../geometry" }
num-traits = "0.2.12"
scanner-rust = "1.2.4"
