[package]
name = "vitrum"
version = "0.1.0"
authors = ["Roma Klapaukh <r.klapaukh@ucl.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse    = "0.2.2"
bvh         = { path = "../bvh" }
file-loader = { path = "../file-loader" }
geometry    = { path = "../geometry" }
num         = "0.3.0"
png         = "0.15-2"
