[package]
name = "vitrum"
version = "0.1.0"
authors = ["Roma Klapaukh <r.klapaukh@ucl.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse    = "0.2.2"
bvh         = { path = "../bvh" }
enum_from_str = "0.1.0"
enum_from_str_derive = "0.1.0"
file-loader = { path = "../file-loader" }
geometry    = { path = "../geometry" }
nalgebra    = "0.21.1"
num         = "0.3.0"
pixels      = "0.0.4"
png         = "0.15-2"
winit       = "0.22.0"
winit_input_helper = "0.6.0"
